--- a/Ongoing.html
+++ b/Ongoing.html
@@ -22,7 +22,7 @@
         <!-- Logo -->
         <div class="col-md-3 text-center text-md-start mb-3 mb-md-0">
           <div class="logo">
-            <img src="/images/logo.png" alt="Company Logo" class="img-fluid" style="max-height: 80px;">
+            <img src="images/logo.png" alt="Company Logo" class="img-fluid" style="max-height: 80px;">
           </div>
         </div>
   
